k8s/manifests/01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ajasta
  labels:
    name: ajasta
    app: ajasta
